# cyyrus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  Makefile.md  README.md  conftest.py  constraints.txt  pip-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-request.md  feature-request.md
.github/workflows/: build.yml  bump-version.yml  github-release.yml  lint-test-version-release-publish-main.yml  publish-pypi.yml  publish-testpypi.yml  test-version-release-publish-dev.yml  test.yml
docs/: git_cleanup_duplicates.sh  introduction.mdx  mint.json
docs/concepts/: datasets.mdx  tasks.mdx  types.mdx
docs/glossary/: introduction.mdx
docs/overview/: cli.mdx  contributing.mdx  roadmap.mdx
docs/schema/: overview.mdx  tasks.mdx  version.mdx
docs/tasks/: Parsing.mdx  extraction.mdx  generation.mdx  labelling.mdx  parsing.mdx  scraping.mdx
examples/: README.md  schema_cookbook.ipynb
examples/notebook/: schema_cookbook.ipynb
examples/schema/: annual_report_to_markdown.yaml  doclaynet_bench.yaml  extract_info_from_invoice.yaml  funsd_layoutlmv3.yaml  (+5 more)
requirements/: constraints.txt  pip-requirements.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
schema/: example.yaml  graph.yaml  invoice.yaml  markdown.yaml  sentiment.yaml
tests/: test_column.py  test_composer.py  test_dataset.py  test_schema.py  test_task.py  test_traversal.py  test_types.py
(+96 files in other folders)
