[project]
name = "cyyrus"
version = "0.0.1"
dynamic = ["description", "authors", "dependencies", "scripts"]
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
reportMissingTypeArgument = true # Report generic classes used without type arguments
strictListInference = true # Use union types when inferring types of lists elements, instead of Any
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "experimental",             # Exclude experimental directory
    "package/python/typestubs",
]

[tool.pytest]
pythonpath = ["package/python"]
testpaths = "tests"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.0"
tag_format = "$version"
version_scheme = "semver2"
version_files = ["setup.py", "package/python/cyyrus/__version__.py"]
update_changelog_on_bump = false                                     # Changelogs are disabled

[tool.commitizen.change_type_map]
build = "MAJOR"
release = "MAJOR"

[tool.commitizen.change_type_order]
BREAKING = 0
MAJOR = 1
MINOR = 2
PATCH = 3
